Fixed animations on mobile

--- a/src/components/game/grid/Grid.css
+++ b/src/components/game/grid/Grid.css
@@ -49,7 +49,7 @@
 .tile {
     height: var(--grid-size);
     width: var(--grid-size);
-    background-color: var(--main-bg-color);
+    background-color: transparent;
     border: none;
     outline: none;
     box-sizing: border-box;
