--- a/src/components/game/grid/Path.css
+++ b/src/components/game/grid/Path.css
@@ -20,12 +20,9 @@
     0% {
         translate: 0px 0px;
     }
-
     50% {
         translate: 0px -16px;
-        background-color: green;
     }
-
     100% {
         translate: 0px 0px;
     }
